# arango-multi-hop-benchmark

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  multihop_qa_generator.py  pyproject.toml
.streamlit/: config.toml
scripts/: run_local.sh
src/multihop_eval/: __init__.py  adhoc.py  arango_gateway.py  config.py  llm_client.py  logging_setup.py  personas.py  pipeline.py  prompts.py  rubric_evaluator.py  run_control.py  summary.py
src/multihop_eval/clients/: __init__.py  arango_gateway.py
src/multihop_eval/exporters/: __init__.py  excel_exporter.py  json_exporter.py  rag_eval_exporter.py
src/multihop_eval/generation/: __init__.py  adhoc.py  models.py  pipeline.py  prompts.py  rubric.py  rubric_evaluator.py  subgraph.py  summary.py
src/multihop_eval/rag_eval/: __init__.py  langfuse_sink.py  models.py  pipeline.py  qrels.py
src/multihop_eval/ui/: __init__.py  state.py  streamlit_app.py  theme.py
tests/: conftest.py
tests/integration/: test_pipeline_with_fakes.py  test_rag_eval_pipeline.py
tests/unit/: test_adhoc.py  test_arango_gateway.py  test_config.py  test_exporters.py  test_llm_client.py  test_prompts.py  test_rag_eval_exporter.py  test_rubric_evaluator.py  test_run_control.py  test_subgraph.py  test_summary.py  test_ui_config_form_help.py  test_ui_multi_system_compare.py  test_ui_rag_eval_tab_help.py  test_ui_state.py  test_ui_theme.py
tests/unit/rag_eval/: test_arango_source.py  test_generation_metrics.py  test_jsonl_source.py  test_langfuse_sink.py  test_models.py  test_qrels.py  test_retrieval_metrics.py
(+13 files in other folders)
