[project]
name = "multihop-eval"
version = "1.0.0"
description = "Multi-hop QA dataset generation, validation, and evaluation against ArangoDB graph data, packaged for Arango BYOC."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "Arango Multi-Hop Eval Team" }]
dependencies = [
  "streamlit>=1.39",
  "python-arango>=8.1",
  "openpyxl>=3.1",
  "requests>=2.32",
  "python-dotenv>=1.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.5",
  "pandas>=2.2",
  "altair>=5.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[project.scripts]
multihop-eval = "multihop_eval.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multihop_eval"]

[tool.hatch.build.targets.sdist]
include = ["src/multihop_eval", "main.py", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]
